test/runnable/named_arg.nt
module named_arg;

void foo(int i) { }

class C {
    this() { }
    void foo(int i) { }
}

struct S {
    int i;
    void foo(int i) { }
}

void main() {
    foo(i=1);
    (new C).foo(i=1);
    S(i=1).foo(i=1);
}
