test/fail_compilation/long_literal.nt
module long_literal;

void main() {
    int i = 1_000_000_000_000;
}
